make sure active file is visible on navigate

--- a/apps/dotcom/client/src/tla/components/TlaSidebar/sidebar.module.css
+++ b/apps/dotcom/client/src/tla/components/TlaSidebar/sidebar.module.css
@@ -249,7 +249,7 @@
 	cursor: pointer;
 	position: relative;
 	top: 0.5px;
-	right: -10px;
+	right: -8px;
 	height: 40px;
 	width: 40px;
 	display: flex;
@@ -489,11 +489,10 @@
 	position: relative;
 	width: 100%;
 	height: 36px;
-	padding: 0px 8px 0px 8px;
+	padding: 0px 0px 0px 8px;
 	display: flex;
 	flex-direction: row;
 	align-items: center;
-	overflow: hidden;
 	gap: 4px;
 	font-weight: bold;
 	color: var(--tla-color-text-3);
